--- a/app/views/v1/date-of-birth.html
+++ b/app/views/v1/date-of-birth.html
@@ -38,7 +38,7 @@
           <input type="text" id="dob-year" name="dob-year" value="{{ dob.year }}" class="year" maxlength="4">
         </div>
         <p class="form-hint">
-          For example: 31/12/1980
+          For example, 31 / 12 / 1980
         </p>
       </div>
     </fieldset>
