--- a/app/views/v1/nhs-number.html
+++ b/app/views/v1/nhs-number.html
@@ -54,7 +54,7 @@
           <input type="text" id="nhs-number" name="nhs-number" value="{{ nhsnumber.number }}" class="-small">
         </div>
         <p class="form-hint">
-          For example: 943 476 5919
+          For example, 943 476 5919
         </p>
       </fieldset>
     </div>
@@ -68,10 +68,10 @@
           </p>
           <p>You can find your NHS number:</p>
           <ul>
-            <li><a href="javascript:return false;">Online using the Find My NHS Number servce</a></li>
-            <li>on your NHS medical card if you have one</li>
-            <li>on a letter from your GP or a hospital</li>
+            <li><a href="javascript:return false;">online</a></li>
             <li>on a printed prescription</li>
+            <li>on a letter from your GP or a hospital</li>
+            <li>on your NHS medical card if you have one</li>
           </ul>
         </div>
       </div>
