--- a/app/views/v1/previous-address-result.html
+++ b/app/views/v1/previous-address-result.html
@@ -14,7 +14,7 @@
   <form action="select-previous-address" method="post">
     <fieldset>
       <legend class="primary">
-        What is your previous address?
+        What was your address?
       </legend>
 
       <table class="natural compact">
@@ -66,11 +66,9 @@
 
     </fieldset>
 
-    <!--
     <p>
-      <a href="#">I can’t find my address in this list</a>
+      <a href="#">I can’t find my address</a>
     </p>
-    -->
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
