--- a/app/views/v1/previous-address.html
+++ b/app/views/v1/previous-address.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-  <h1 class="primary">Are you registering with {{ practiceName }} because you’ve moved home?</h1>
+  <h1 class="primary">Are you registering because you’ve moved house?</h1>
 
   <form method="post">
     <fieldset>
