--- a/app/views/v1/contact-details.html
+++ b/app/views/v1/contact-details.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout.html' %}
 
 {% block page_title %}
-  Your contact details : 
+  Your contact details :
   {% if practiceName %}
     Register with {{ practiceName }}
   {% else %}
@@ -23,15 +23,11 @@
 
     <fieldset>
       <div class="form-group">
-        <label for="telephone">Telephone number</label>
+        <label for="telephone">Phone number</label>
         <input type="tel" id="telephone" name="telephone" value="{{ contact.telephone }}">
       </div>
       <div class="form-group">
-        <label for="mobile">Mobile number</label>
-        <input type="tel" id="mobile" name="mobile" value="{{ contact.mobile }}">
-      </div>
-      <div class="form-group">
-        <label for="email">Email address</label>
+        <label for="email">Email</label>
         <input type="text" id="email" name="email" value="{{ contact.email }}">
       </div>
     </fieldset>
