--- a/app/views/v1/home-address-postcode.html
+++ b/app/views/v1/home-address-postcode.html
@@ -27,8 +27,8 @@
       <div class="form-group">
         <div>
           <label for="building">
-            Enter your building or flat number (optional)
-            <span class="form-hint">For example ‘122’ or ‘Flat 11’</span>
+            Flat or house number, or house name (optional)
+            <span class="form-hint">For example, 122 or 17c</span>
           </label>
           <input type="text" id="building" name="building" value="{{ building }}" class="-small">
         </div>
@@ -44,11 +44,13 @@
 
       <div class="form-group {% if error.postcode %}-errors{% endif %}">
         <div>
-          <label for="postcode">Enter your home postcode</label>
+          <label for="postcode">Postcode</label>
           <input type="text" id="postcode" name="postcode" value="{{ postcode }}" class="-small">
         </div>
       </div>
     </fieldset>
+
+    <p><a href="#">I will type in my address</a></p>
 
     <div class="form-group -controls">
       <button type="submit" class="button">Find address</button>
