--- a/app/views/v1/home-address-result.html
+++ b/app/views/v1/home-address-result.html
@@ -66,11 +66,10 @@
 
     </fieldset>
 
-    <!--
+
     <p>
-      <a href="#">I can’t find my address in this list</a>
+      <a href="#">I can’t find my address</a>
     </p>
-    -->
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
