--- a/app/views/v1/registration-submitted.html
+++ b/app/views/v1/registration-submitted.html
@@ -10,13 +10,19 @@
 
 {% block content %}
   <div class="measure">
-    Cheers then.
 
-    Confirm the sending. What happens next.
+    <h1>Your details have been sent to {{ practicename }} and you’ll get an email confirming this.</h1>
 
-    Blod or organs?
+    <h2>What happens next?</h2>
 
-    Get an ID?
+    <p>Your new GP will send a letter or email confirming that you’re registered with them. This can take 7 days.</p>
+
+    <p>If you need to book an appointment phone your GP.</p>
+
+    <h3>Sign up for blood and organ donation</h3>
+
+    <p>You can help those who need a <a href="#">blood</a> or <a href="#">organ donation.</a></p>
+
   </div>
 {% endblock %}
 
