--- a/app/views/v1/start.html
+++ b/app/views/v1/start.html
@@ -50,10 +50,10 @@
           </p>
           <p>You can find your NHS number:</p>
           <ul>
-            <li><a href="javascript:return false;">Online using the Find My NHS Number servce</a></li>
-            <li>on your NHS medical card if you have one</li>
-            <li>on a letter from your GP or a hospital</li>
+            <li><a href="javascript:return false;">online</a></li>
             <li>on a printed prescription</li>
+            <li>on a letter from your GP or a hospital</li>
+            <li>on your NHS medical card if you have one</li>
           </ul>
         </div>
       </div>
