--- a/app/views/v1/registration-submitted.html
+++ b/app/views/v1/registration-submitted.html
@@ -11,7 +11,7 @@
 {% block content %}
   <div class="measure">
 
-    <h1>Your details have been sent to {{ practicename }} and you’ll get an email confirming this.</h1>
+    <h1>Your details have been sent to {{ practiceName }} and you’ll get an email confirming this.</h1>
 
     <h2>What happens next?</h2>
 
