Tweak index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -3,11 +3,12 @@
 {% block page_title %}Index : {{serviceName}}{% endblock %}
 
 {% block content %}
+  <h1>Prototypes</h1>
+  <h2>Proposition</h2>
+  <p>...</p>
+  <h2>Research triggers</h2>
   <ul>
-    <li><a href="/v1/start">Sprint 1: GMS1 form</a></li>
-  </ul>
-  <ul>
-    <li><a href="/library/form-elements">Library: form elements</a></li>
+    <li><a href="/v1/start">GMS1 form, v1.0</a></li>
   </ul>
 {% endblock %}
 
