--- a/app/views/v1/home-address-result.html
+++ b/app/views/v1/home-address-result.html
@@ -68,7 +68,7 @@
 
 
     <p>
-      <a href="#">I can’t find my address</a>
+      <a href="home-address-manual">I can’t find my address</a>
     </p>
 
     <div class="form-group -controls">
