Tweak type on start page a bit

--- a/app/views/v1/start.html
+++ b/app/views/v1/start.html
@@ -26,7 +26,7 @@
           Register with {{ practiceName }}
         </h1>
         <div class="content-seperator"></div>
-        <p class="precis">It usually takes about 10 minutes.</p>
+        <p class="h3 precis">It usually takes about 10 minutes.</p>
       </div>
     </div>
   </div>
@@ -34,7 +34,7 @@
 
   <div class="measure">
 
-    <p>You’ll be asked for your:</p>
+    <h2>You’ll be asked for your:</h2>
 
     <ul>
       <li>name and address</li>
