--- a/app/assets/sass/variables/_frutiger.scss
+++ b/app/assets/sass/variables/_frutiger.scss
@@ -59,6 +59,14 @@ h2,
   }
 }
 
+h3,
+.h3 {
+  margin: 0; padding: $leading 0;
+  font-size: 24px;
+  font-weight: $boldweight;
+  line-height: $leading*2;
+}
+
 .smallprint {
   font-size: $smallprint;
   color: $smallprint-grey;
