Sweeten up completion page a bit

--- a/app/assets/sass/modules/signage/_info.scss
+++ b/app/assets/sass/modules/signage/_info.scss
@@ -18,3 +18,8 @@
   background-color: tint($yellow, 90);
   color: darken($yellow, 30);
 }
+
+.completion {
+  border-top: 2px solid $light-green;
+  background-color: tint($light-green, 90);
+}
