--- a/app/assets/sass/modules/disclosure/_details.scss
+++ b/app/assets/sass/modules/disclosure/_details.scss
@@ -3,5 +3,13 @@ details {
 
   summary {
     text-decoration: underline;
+    display: inline-block;
+
+    &:focus {
+      outline: 0;
+      -webkit-box-shadow: 0 0 0 5px $focus-colour;
+      -moz-box-shadow: 0 0 0 5px $focus-colour;
+      box-shadow: 0 0 0 5px $focus-colour;
+    }
   }
 }
