--- a/app/assets/sass/modules/typography/_links.scss
+++ b/app/assets/sass/modules/typography/_links.scss
@@ -10,3 +10,10 @@ a:hover {
 a:visited {
     color: $visited-link-colour;
 }
+
+a:focus {
+  outline: 0;
+  -webkit-box-shadow: 0 0 0 5px $focus-colour;
+  -moz-box-shadow: 0 0 0 5px $focus-colour;
+  box-shadow: 0 0 0 5px $focus-colour;
+}
